making the css files available in the dependency. Storing export files to a dedicated directory. Refactored some code (#146)